    not declared in the api.xml.
    This bug has been in XINS since version 0.207.
  - The create-logdoc doesn't generated the domain and default-locale
    attributes in the log.xml file.
  - The generated javadoc for the API has now the package private visibility.

* Build and release process:
  - Added the possibility to release with a specific version
    (e.g. 1.0.0-beta2).

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.208:

* XINS/Java Common Library:
  - Added the remove() method in ProtectedPropertyReader. The set() method
    does not remove the property anymore if the value is null.
  - Changed HTTPServiceCaller handling of input parameters. If a parameter
    value is null, then the parameter is now passed down, with the empty
    string as the value. Previously the parameter would not be sent down at
    all.
  - Added 'failOverAllowed' property to HTTPCallRequest. If this flag is set,
    then fail-over is always allowed.

* XINS/Java Client Framework:
  - Applied some refactorings and improved documentation.

* Logdoc
  - Removed unused log entries.

* Generated specification documentation:
  - Fixed the API owner is now printed correctly on the API page.
    This bug has been in XINS since version 0.207.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.207:

* XINS/Java Server Framework:
  - Removed the getCallResult() method from CallContext as it's not used.
  - Caught BootstrapExceptions and Throwables are now handled in a similar
    way.
  - Removed some TODOs that are no longer relevant.
  - Check the state of API and APIServlet before calling a method.
  - Used another system to suspend any call to an API when the statistics
    are reset.
  - Removed _PerformGC metafunction.
  - Removed support for XSLT transformations.
  - Changed access level of field _api in class Function from protected to