@@ -847,4 +847,23 @@ http://sourceforge.net/project/showfiles.php?group_id=21935&amp;package_id=16608
 
 	<target name="all" depends="java-server,javadoc" description="Generates everything" />
 
+	<target name="help" description="Print the help of the main targets">
+		<echo message="Main targets:" />
+		<echo message="clean                Clean anyting build before." />
+		<echo message="java                 Compile the source files." />
+		<echo message="javadoc              Generates the XINS javadoc." />
+		<echo message="logdoc-html          Generates the Logdoc HTML pages." />
+		<echo message="version              Prints the XINS version." />
+		<echo message="tests                Run the unit tests." />
+		<echo message="                     Options: -lib lib (required)" />
+		<echo message="" />
+		<echo message="release              Create a new release" />
+		<echo message="                     Options: -lib lib (required)" />
+		<echo message="                      -Dforce=true (optional) bypass the -dev suffix check" />
+		<echo message="                      -Dmajor.release=true (optional) won't change the .version.properties" />
+		<echo message="To create a release the following requirements are needed:" />
+		<echo message=" xins-docs and xins-examples CVS directories up-to-date and in the same directory as xins." />
+		<echo message=" A ${user.home}/.sourceforge.properties file with the sf.user and sf.password properties." />
+		<echo message=" A DOCBOOK_XSLT_HOME environment variable set to the Docbook XSLT." />
+	</target>
 </project>
