@@ -56,6 +56,7 @@ CHANGES INTRODUCED IN XINS 0.209:
 * Build and release process:
   - Added the possibility to release with a specific version
     (e.g. 1.0.0-beta2).
+  - Added the help target that provides help for the main targets.
 
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.208:
